Advanced_Feature/3.1_CrossNamespace_From/gw-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              poc-route-ns: "true"

        kinds:
          - kind: HTTPRoute

---
apiVersion: v1
kind: Namespace
metadata:
  name: web-route
  labels:
    poc-route-ns: "true"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cross-ns-from-route
  namespace: web-route
spec:
  parentRefs:
    - name: http-gw
      namespace: web
      sectionName: bnk-listener

  hostnames:
    - coffee.f5bnk.com

  rules:
    - backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
